<resources>
    <string name="app_name">Sathi</string>
    <string name="logo">LOGO</string>
    <string name="desc">अखिल भारतीय बंगी वैश्य महासभा खगड़िया इकाई में जुड़ने के लिये कृपया नीचे मोबाइल नंबर डाले</string>
    <string name="phone">Phone</string>
    <string name="numberPrefix">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="_continue">Continue</string>
    <string name="please_wait">Please wait…</string>
    <string name="_x">X</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="_khagaria_ekai">खगड़िया इकाई</string>
    <string name="title">अखिल भारतीय बंगी वैश्य महासभा</string>
    <string name="image_view">Image View</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="s_o">S/o</string>
    <string name="d_o">D/o</string>
    <string name="w_o">W/o</string>
    <string name="father_name">Father\'s Name</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="mm">MM</string>
    <string name="d_o_b">D.O.B</string>
    <string name="blood_group">Blood Group</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="separated">Separated</string>
    <string name="widowed">Widowed</string>
    <string name="marital_status">Marital Status</string>
    <string name="qualification">Qualification</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="pincode">Pincode</string>
    <string name="about">About</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="child_details">Child Details</string>
    <string name="number_of_child">Number of child</string>
    <string name="detail_of_1st_child">Detail of 1st Child</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
    <string name="members">Members</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idcard">IDCard</string>
    <string name="tablayout">TabLayout</string>
    <string name="personal_details">Personal Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_member_id_name">Search Member ID / Name</string>
    <string name="purpose_1">1. संगठन अपने समाज के जाति के लोगों के हितों का संरक्षण करेंगी । जिसमें सर्वप्रथम अपने जाति के युवक और युवती के वैवाहिक परिचय सम्मेलन आयोजित करेंगी । ताकि हमारे समाज के लोगों को दूसरी जाति में शादी करने से रोका जा सके। इसके लिए एक मंच तैयार किया जाएगा। जिसमें समाज के वरिष्ठ सदस्यों की एक समिति बनायी जायेगी।</string>
    <string name="purpose_2">2. हमारे समाज में कई युवतियां हैं जो योग्य तो होती हैं लेकिन दहेज के कारण उनकी शादी नहीं हो पाती हैं इसके लिए समाज के युवाओं और परिवार के बीच समन्वय बनाने का कार्य भी समिति करेंगी।</string>
    <string name="purpose_3">3. वैसी युवती के माता-पिता जो आर्थिक रूप से कमजोर हैं उनको भी केंद्रीय कमेटी संगठन ना सिर्फ आर्थिक ब्लकि शारीरिक रूप से भी हमारे जिले के पदाधिकारी सेवा भाव से मदद करने का कार्य करेंगे।</string>
    <string name="purpose_4">4. हमारे जाति के जो युवा बेरोजगार हैं उसके लिये संगठन उसके स्वरोजगार या नौकरी के लिए एक \" कैरियर काउंसिलिंग और प्रशिक्षण \" कार्यक्रम चलाया जाएगा। जिसमें हमारे जाति के युवाओं को सही मार्गदर्शन और ज्ञान हमारे संगठन के वरिष्ठ और विभिन्न क्षेत्रों में कार्यरत प्रतिष्ठित लोगों की समिति बनाई गई है। जिसके लिए इनका सहयोग लिया जायेगा।</string>
    <string name="purpose_5">5. जो आरक्षण का roster राज्य सरकारों में मिलता हैं वही •आरक्षण केंद्रीय प्रतिनियुक्ति में मिले उसके लिये प्रयास करना । जिससे हमारे युवाओं को आगे बढ़ाने में सहायक हो।</string>
    <string name="purpose_6">6. हमारी संगठन की सोच यह भी हैं कि हम सिर्फ अपने जाति के लोगों के अलावे, समाज के लोगों का आपदा और सामाजिक गतिविधियों में भी सहयोग करना भी हमारा कर्तव्य होगा।</string>
    <string name="purpose_7">7. अपने जाति के लोगों का सालाना परिचय सम्मेलन समारोह करना भी लक्ष्य हैं।</string>
    <string name="purpose_8">8. समय समय पर किसी महापुरुष के जन्मदिन या अन्य दिनों में भी साल में 2 बार रक्त दान शिविर का आयोजन करना।</string>
    <string name="purpose_9">9. संगठन का अपना oxygen और सभी मेडिकल सुविधा युक्त एम्बुलेंस को अपने समाज के लिए खरीदना । जो समय समय पर हमारे जाति के अलावा अन्य लोगों की भी सहायता हो सके।</string>
    <string name="purpose_10">10. और अपने जाति के लोगों के लिये और अन्य समाज के लोगों के भलाई के लिये धर्मशाला का निमार्ण बावा नगरी देवघर या बाबा वासुकि नाथ में अपने पूर्वज चंद्र धर सौदागर (चांद सौदागर) के नाम पर करना भी मुख्य रूप से शामिल हैं जिसका लक्ष्य 5 वर्षों में पूरा करने का प्रयास किया जाएगा।</string>
    <string name="purpose_11">11. हमारे समाज के वैसे लोग जो पैसे के अभाव में अपने असाध्य रोगों का इलाज नहीं कर पाते हैं उनको आर्थिक और शारीरिक मदद भी करना।</string>
    <string name="purpose_12">12. प्रत्येक जिलों में जंहा हमारी संख्या ज्यादा हैं वहाँ कमिटी का निर्माण कर उसे सक्रिय करना।</string>
    <string name="post">post</string>
    <string name="create_post">Create Post</string>
    <string name="tap_to_select_an_image">Tap to select an image.</string>
    <string name="write_your_caption_here">Write your caption here...</string>
    <string name="upload">Upload</string>
    <string name="default_notification_channel_id">default</string>
    <string name="create_new_designation">नया पदनाम बनाएं</string>
    <string name="appoint_designation">पदनाम नियुक्त करें</string>
    <string name="create_notice">नोटिस प्रकाशित करें</string>
    <string name="create_meeting">एक बैठक शुरू करें</string>
    <string name="delete_member">सदस्य हटाएं</string>
    <string name="icon">icon</string>
    <string name="create_designation">Create Designation</string>
    <string name="tap_to_attach_a_file">Tap to attach a file</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="click_here_to_open">Click here to open</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="reject">Reject</string>
    <string name="success">success</string>
    <string name="approve">Approve</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="share">share</string>
    <string name="comments">Comments</string>
    <string name="loading">loading</string>
    <string name="loading___">Loading...</string>
    <string name="village">Village</string>
    <string name="post_office">Post Office</string>
    <string name="district">District</string>
    <string name="dp">dp</string>
    <string name="add_member">सदस्य जोड़ें</string>

</resources>