<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.Home.Purpose">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="90dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/accent_red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/_khagaria_ekai"
            android:textAlignment="center"
            android:textColor="@color/accent_red"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_1"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_2"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_3"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_4"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_5"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_6"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_7"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_8"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_9"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_10"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_11"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/purpose_12"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>