<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="#ff7b5b"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/members"
        android:icon="@drawable/ic_members"
        android:title="@string/members"
        app:cnb_backgroundColor="#ff7b5b"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="#ff7b5b"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/admin"
        android:icon="@drawable/ic_admin"
        android:title="@string/admin"
        app:cnb_backgroundColor="#ff7b5b"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        app:showAsAction="ifRoom" />
</menu>