<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_login_scene"
    tools:context=".screens.Login.Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="272dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/desc"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toTopOf="@id/input_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <LinearLayout
        android:id="@+id/input_container"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/circular_border_10"
            android:backgroundTint="#e6e6e6"
            android:paddingHorizontal="10dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/phone"
                app:layout_constraintBottom_toBottomOf='parent'
                app:layout_constraintEnd_toStartOf="@id/numberPrefix"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_phone_outline" />

            <TextView
                android:id="@+id/numberPrefix"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/numberPrefix"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf='parent'
                app:layout_constraintEnd_toStartOf="@id/etPhone"
                app:layout_constraintStart_toEndOf="@+id/phone"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:autofillHints="phone"
                android:background="@null"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:minHeight="48dp"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf='parent'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numberPrefix"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.abbvmk.sathi.Views.OTP_InputBox.OTP_InputBox
            android:id="@+id/otp_input_box"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:visibility="gone" />

    </LinearLayout>



    <com.abbvmk.sathi.Views.ProgressButton.ProgressButton
        android:id="@+id/submit_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:alpha="0"
        app:backgroundColor="@color/black"
        app:progressColor="@color/white"
        app:textColor="@color/white"
        app:cardRadius="15dp"
        app:text="@string/_continue"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/input_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>